@@ -1,14 +1,4 @@
-<!-- start of $Id: html_bottom_table.php,v 1.22 2001/10/25 15:22:34 rossigee Exp $ -->
-<tr bgcolor="<?php echo $glob_theme->tr_color ?>">
-	<td align="center" valign="middle">
-		<? if ($delete_button_icon) { ?>
-			<input type="image" src="themes/<?php echo $theme ?>/img/delete.gif" alt="<?php echo $alt_delete ?>" />
-		<? } else { ?>
-			<input type="submit" value="<?php echo $html_delete ?>" />
-		<? } ?>
-	</td>
-	<td colspan="6"><!--<a href="javascript:void(null)" class="button" onclick="SelectAll();"><?php echo $html_select_all ?></a>--></td>
-</tr>
+<!-- start of $Id: html_bottom_table.php,v 1.23 2001/10/28 21:48:42 rossigee Exp $ -->
 </table>
 <input type="hidden" name="nothing" value="looks_good" />
 </form>
@@ -29,4 +19,4 @@ function SelectAll() {
 </script>
 
 <?php require_once ('./html/menu_inbox.php'); ?>
-<!-- end of $Id: html_bottom_table.php,v 1.22 2001/10/25 15:22:34 rossigee Exp $ -->
+<!-- end of $Id: html_bottom_table.php,v 1.23 2001/10/28 21:48:42 rossigee Exp $ -->
